--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-next-js",
+  "name": "bisnis_web_app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
+    "axios": "^1.6.7",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "next": "13.5.4",
+    "nodemon": "^3.0.3",
+    "pg": "^8.11.3",
+    "pool": "^0.4.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
+    "react-daisyui": "^5.0.0",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10",
+    "daisyui": "^4.7.2",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
